--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#083610",
-        "titleBar.activeBackground": "#0B4B17",
-        "titleBar.activeForeground": "#F3FDF5"
+        "activityBar.background": "#40077A",
+        "titleBar.activeBackground": "#5A0AAA",
+        "titleBar.activeForeground": "#FCFAFF"
     }
 }
